tests/purs/failing/1733.purs
-- @shouldFailWith UnknownValueHint
module Main where

import Thingy as Thing

main = Thing.doesntExist "hi"
