tests/purs/failing/1733.out
Error found:
in module [33mMain[0m
at tests/purs/failing/1733.purs:6:8 - 6:25 (line 6, column 8 - line 6, column 25)

  Unknown value [33mThing.doesntExist[0m


See https://github.com/purescript/documentation/blob/master/errors/UnknownName.md for more information,
or to contribute content related to this error.

